--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.1.0",
     "node-sass": "^4.14.1",
+    "sass": "^1.26.5",
     "tailwindcss": "^1.4.6"
   },
   "repository": {
